--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -5,7 +5,7 @@
 
 - name: RISC-V
   link: https://danielthurmond.github.io/RISC-V/
-  image: /assets/riscv.png
+  image: /assets/RISCV.drawio.png
   description: A basic RISC-V processor implementation using SystemVerilog.
 
 - name: Digital Design
